--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".vacinas.Pneumo23Activity"></activity>
+        <activity android:name=".vacinas.MeningoACWYActivity"></activity>
+        <activity android:name=".vacinas.Pneumo23Activity" />
         <activity android:name=".vacinas.ObservacoesGeraisActivity" />
         <activity
             android:name=".MainActivity"
@@ -44,11 +45,10 @@
         <activity android:name=".vacinas.VaricelaActivity" />
         <activity android:name=".vacinas.VIPActivity" />
         <activity android:name=".vacinas.VOPActivity" />
-        <activity android:name=".vacinas.RotavirusActivity" />
-        <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
+        <activity android:name=".vacinas.RotavirusActivity" /> <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-6122972364319881~2402453167"/>
+            android:value="ca-app-pub-6122972364319881~2402453167" />
     </application>
 
 </manifest>
